# homelab

./: .gitmodules  README.md
cert-manager/: README.md  certificate.yaml  kuard.yaml  letsencrypt-production.yaml  letsencrypt-staging.yaml
common/: README.md  register-rh.yml  unregister-rhsm.yml
ipsec/: README.md  ansible.cfg  inventory  setup.yml
k8s/: README.md  Vagrantfile  inventory  setup-k8s.yml  setup-kubeadm-config.sh
k8s-nexus/: Makefile  README.md  repo-proxied-dockerhub.json  repo-proxied-npm.json  repo-proxied-pypi.json  values.yaml
k8s-oracle/: README.md  Vagrantfile  ansible.cfg  galaxy-requirements.yml  inventory  site.yml
k8s-rancher/: README.md  Vagrantfile  ansible.cfg  inventory  site.yaml  user-data.yaml  variables.yaml
k8s-rancher-additional/: README.md  site.yaml
k8sha/: README.md  Vagrantfile  setup-k8s.yml
keycloak-demo/: README.md  clientconfig-cm.yaml  keycloak-ingress.yaml  keycloak.yaml  oidcdemo-ingress.yaml  oidcdemo.yaml  postgresql-database.yaml
local-development/: README.md  django-secret-example.yaml  local-values.yaml  postgresql-database.yaml  skaffold.yaml
local-development/django_project/: Dockerfile  pyproject.toml
local-development/django_project/src/api/: urls.py  views.py
local-development/django_project/src/core/: settings.py  urls.py
local-development/django_project/src/scripts/: start.sh
nexus/: docker-compose.yml  nginx.conf
rancher/: README.md  Vagrantfile  deploy-rancher.sh  inventory  inventory-mc  values-managed.yml  values.yml
swarm1/: README.md  graylog-compose.yml  inventory  site.yml
(+118 files in other folders)
